2000-07-04  Bharat Mediratta  <bharat@harmony.menalto.com>

	* Updated README to reflect v1.0 feature list