@@ -1,3 +1,9 @@
+2000-07-05  Bharat Mediratta  <bharat@harmony.menalto.com>
+
+	* Added new setup process using the 'setup' directory.  This
+	set of pages, although not yet very robust, will walk you through
+	the process of configuring Gallery for your local site.
+
 2000-07-04  Bharat Mediratta  <bharat@harmony.menalto.com>
 
 	* Updated README to reflect v1.0 feature list
